Changed chatroom styling to fix scrollbar issue.

--- a/ChatLoco/ChatLoco/Content/css/chatroom/chatroom.css
+++ b/ChatLoco/ChatLoco/Content/css/chatroom/chatroom.css
@@ -36,7 +36,7 @@
 
     .force-overflow
     {
-	    min-height: 450px;
+	    min-height: 350px;
     }
 
     #style-1::-webkit-scrollbar-track
